Bug 480389 - Panel icon doesn't do anything on clicking
Summary: Panel icon doesn't do anything on clicking
Status: RESOLVED FIXED
Alias: None
Product: KClock
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.01.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Devin Lin
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-27 12:04 UTC by D. Debnath
Modified: 2025-03-29 18:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description D. Debnath 2024-01-27 12:04:03 UTC
The icon in the plasma panel doesn't do anything on clicking. I'm on Plasma 6.0 RC1.


SOFTWARE/OS VERSIONS:

Operating System: Arch Linux 
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Kernel Version: 6.6.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Doug 2024-01-28 06:16:08 UTC
Do you mean the Digital Clock Widget that is on the default panel?  If so I cannot reproduce on KDE Neon Testing, which is Plasma 6.0RC1 as well, though with KDE Frameworks 5.249.0 and Qt 6.6.1.  I know that Qt 6.7 has been causing problems.
Comment 2 D. Debnath 2024-01-28 13:24:02 UTC
No, I meant the KClock icon on the system tray that says KClock Daemon
Comment 3 Bug Janitor Service 2024-02-12 03:45:28 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 4 Devin Lin 2024-02-12 21:56:53 UTC
It was intended to just show that an alarm is scheduled (originally meant to show in the Plasma Mobile status bar). Perhaps it should open kclock if clicked.
Comment 5 D. Debnath 2024-02-13 02:28:38 UTC
I think it should also open a menu on right clicking and that menu should at least have the option to quit the demon.
Comment 6 leon pollak 2024-03-03 11:23:04 UTC
Voting +100 for icon to open the application - too annoying to go to krunner and type...
Comment 7 Bug Janitor Service 2025-03-29 13:52:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kclock/-/merge_requests/176
Comment 8 Kai Uwe Broulik 2025-03-29 18:33:52 UTC
Git commit b812e614730d12fa47b5bf44e24ed1fe222d25e4 by Kai Uwe Broulik.
Committed on 29/03/2025 at 18:32.
Pushed by broulik into branch 'master'.

AlarmModel: Launch kclock on Alarms page when clicking alarms SNI

It just sits there in tray doing nothing otherwise.

M  +18   -0    src/kclockd/alarmmodel.cpp
M  +1    -0    src/kclockd/alarmmodel.h

https://invent.kde.org/utilities/kclock/-/commit/b812e614730d12fa47b5bf44e24ed1fe222d25e4