AlarmModel: Launch kclock on Alarms page when clicking alarms SNI

It just sits there in tray doing nothing otherwise.

BUG: 480389